Finished tests for ExcludeBiddersFunction.